usunięcie linków z opisów

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "4      2  [PL/EN]           Piękne, stylowe i wysmakowan..."
       ]
      },
-     "execution_count": 57,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "Name: Label, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "'do wynajęcia mieszkanie dwupokojowe z ogródkiem i garażem w wilanowie zawadach przy ul. bruzdowej 100d. mieszkanie gotowe do wynajęcia, dostępne od zaraz, częściowo umeblowane (kuchnia, łazienka i przedpokój). wygodne, przestronne, w sypialni duża szafa, ogródek około 40 m2. sypialnia o powierzchni 15 m2 z dużymi oknami i roletami. do mieszkania przynależy miejsce parkingowe oraz duża komórka lokatorska na poziomie -1 w cenie 350 zł. komunikacja autobusowa przy placu vogla i ulicy sytej, tam też znajduje się mini galeria, lidl, biedronka, restauracje, punkty usługowe, miejsca spotkań. osiedle zamknięte z wyjściem i wyjazdem do wału zawadowskiego, tuż za wałem jest wisła, dużo zieleni, miejsc do spacerów, trasa rowerowa, wiślańskie plaże. podana cena jest bez czynszu administracyjnego, który wynosi 950 zł. wymagany najem okazjonalny. zapraszam zobacz wirtualny spacer: https://panoramy.galactica.pl/virgo/423768pośrednik odpowiedzialny zawodowo za wykonanie umowy pośrednictwa:  (licencja nr: 24900)'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,29 +156,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Usunięcie znaków specjalnych, interpunkcji oraz liczb"
+    "### Usunięcie linków, znaków specjalnych, interpunkcji oraz liczb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\wilko\\AppData\\Local\\Temp\\ipykernel_3404\\1233241414.py:8: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\wilko\\AppData\\Local\\Temp\\ipykernel_3404\\3048161841.py:9: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df['Opis'] = df['Opis'].str. replace('\\d+', '')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'do wynajęcia mieszkanie dwupokojowe z ogródkiem i garażem w wilanowie zawadach przy ul bruzdowej d mieszkanie gotowe do wynajęcia dostępne od zaraz częściowo umeblowane kuchnia łazienka i przedpokój wygodne przestronne w sypialni duża szafa ogródek około  m sypialnia o powierzchni  m z dużymi oknami i roletami do mieszkania przynależy miejsce parkingowe oraz duża komórka lokatorska na poziomie  w cenie  zł komunikacja autobusowa przy placu vogla i ulicy sytej tam też znajduje się mini galeria lidl biedronka restauracje punkty usługowe miejsca spotkań osiedle zamknięte z wyjściem i wyjazdem do wału zawadowskiego tuż za wałem jest wisła dużo zieleni miejsc do spacerów trasa rowerowa wiślańskie plaże podana cena jest bez czynszu administracyjnego który wynosi  zł wymagany najem okazjonalny zapraszam zobacz wirtualny spacer httpspanoramygalacticaplvirgopośrednik odpowiedzialny zawodowo za wykonanie umowy pośrednictwa  licencja nr '"
+       "'do wynajęcia mieszkanie dwupokojowe z ogródkiem i garażem w wilanowie zawadach przy ul bruzdowej d mieszkanie gotowe do wynajęcia dostępne od zaraz częściowo umeblowane kuchnia łazienka i przedpokój wygodne przestronne w sypialni duża szafa ogródek około  m sypialnia o powierzchni  m z dużymi oknami i roletami do mieszkania przynależy miejsce parkingowe oraz duża komórka lokatorska na poziomie  w cenie  zł komunikacja autobusowa przy placu vogla i ulicy sytej tam też znajduje się mini galeria lidl biedronka restauracje punkty usługowe miejsca spotkań osiedle zamknięte z wyjściem i wyjazdem do wału zawadowskiego tuż za wałem jest wisła dużo zieleni miejsc do spacerów trasa rowerowa wiślańskie plaże podana cena jest bez czynszu administracyjnego który wynosi  zł wymagany najem okazjonalny zapraszam zobacz wirtualny spacer  odpowiedzialny zawodowo za wykonanie umowy pośrednictwa  licencja nr '"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,8 @@
    "source": [
     "def remove_special_chars(text):\n",
     "    if text is not None:\n",
-    "        cleaned_text = re.sub(r'[^\\w\\s]', '', text)  \n",
+    "        text = re.sub(r'http\\S+', '', text)\n",
+    "        cleaned_text = re.sub(r'[^\\w\\s]', '', text) \n",
     "        return cleaned_text\n",
     "    else:\n",
     "        return None\n",
@@ -206,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'wynająć mieszkanie dwupokojowy ogródek garaż wilanowa zawada ulica bruzdowy d mieszkanie gotowy wynająć dostępny zaraz częściowo umeblować kuchnia łazienka przedpokój wygodny przestronny sypialnia duży szafa ogródek   metr sypialnia powierzchnia   metr duży okno rolet mieszkanie przynależeć miejsce parkingowy duży komórka lokatorsky poziom   cena   złoty komunikacja autobusowy plac vogla ulica syty znajdować mini galeria lidl biedronka restauracja punkt usługowy miejsce spotkanie osiedle zamknięty wyjście wyjazd wał zawadowskiy tuż wał wisły zieleń miejsce spacer trasa rowerowy wiślański plaża podać cena czynsz administracyjny wynosić   złoty wymagać najem okazjonalny zapraszać zobaczyć wirtualny spacer httpspanoramygalacticaplvirgopośrednik odpowiedzialny zawodowo wykonać umowa pośrednictwo   licencja numer'"
+       "'wynająć mieszkanie dwupokojowy ogródek garaż wilanowa zawada ulica bruzdowy d mieszkanie gotowy wynająć dostępny zaraz częściowo umeblować kuchnia łazienka przedpokój wygodny przestronny sypialnia duży szafa ogródek   metr sypialnia powierzchnia   metr duży okno rolet mieszkanie przynależeć miejsce parkingowy duży komórka lokatorsky poziom   cena   złoty komunikacja autobusowy plac vogla ulica syty znajdować mini galeria lidl biedronka restauracja punkt usługowy miejsce spotkanie osiedle zamknięty wyjście wyjazd wał zawadowskiy tuż wał wisły zieleń miejsce spacer trasa rowerowy wiślański plaża podać cena czynsz administracyjny wynosić   złoty wymagać najem okazjonalny zapraszać zobaczyć wirtualny spacer   odpowiedzialny zawodowo wykonać umowa pośrednictwo   licencja numer'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
