dodano dodatkowe typy wektoryzacji tekstu

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -2,24 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\wilko\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import spacy"
+    "import re"
    ]
   },
   {
@@ -477,6 +465,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Opis klas\n",
+    "- nieumeblowane: 0\n",
+    "- umeblowane: 1\n",
+    "- częściowo umeblowane: 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -501,7 +499,7 @@
     }
    ],
    "source": [
-    "df_unfurnitured['Label'] = df_unfurnitured['Label'].where(df_unfurnitured['Label'] == 'NaN', 0).astype(int)\n",
+    "df_unfurnitured['Label'] = df_unfurnitured['Label'].where(df_unfurnitured['Label'] == 'NaN', 0).astype(int) \n",
     "df_furnitured['Label'] = df_furnitured['Label'].where(df_furnitured['Label'] == 'NaN', 1).astype(int)\n",
     "df_semifurnitured['Label'] = df_semifurnitured['Label'].where(df_semifurnitured['Label'] == 'NaN', 2).astype(int)"
    ]
