dodano raport klasyfikacji

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -300,7 +300,7 @@
    "metadata": {},
    "source": [
     "## Wektoryzacja danych tekstowych z wykorzystaniem macierzy TF-IDF\n",
-    "TfidfVectorizer przekształca listę opisów na macierz numeryczną, w której każdy wiersz odpowiada jednemu opisowi, a każda kolumna odpowiada jednemu unikalnemu słowu. Wartości w macierzy TF-IDF są obliczane przy użyciu dla każdego słowa w każdym opisie. Wagi odzwierciedlają istotność danego słowa w konkretnym opisie w kontekście całego zbioru opisów.\n",
+    "TfidfVectorizer przekształca listę opisów na macierz numeryczną, w której każdy wiersz odpowiada jednemu opisowi, a każda kolumna odpowiada jednemu unikalnemu słowu. Wartości w macierzy TF-IDF są obliczane dla każdego słowa w każdym opisie. Wagi odzwierciedlają istotność danego słowa w konkretnym opisie w kontekście całego zbioru opisów.\n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
