--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -19,8 +19,7 @@
     "import pandas as pd\n",
     "import re\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from stop_words_pl import get_stop_words_pl"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -997,7 +996,9 @@
    "outputs": [],
    "source": [
     "def one_sample_predict(model, train_data):\n",
-    "    text = input(\"Podaj opis\")\n",
+    "    \"\"\" Funkcja przyjmuje wytrenowany model oraz jego dane treningowe w postaci tekstowej. \n",
+    "    Pobiera od użytkownika pojedyńczy opis przetwarzając go i zwracając predykcję \"\"\"\n",
+    "    text = input(\"Podaj opis: \")\n",
     "    tfidf = TfidfVectorizer(max_features=80)\n",
     "    _ = tfidf.fit_transform(train_data)\n",
     "    classes = [\"nieumeblowane\", \"umeblowane\", \"częściowo umeblowane\"]\n",
@@ -1036,7 +1037,6 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    df[\"Opis\"], df[\"Label\"], random_state=42, test_size=0.2, shuffle=True\n",
     ")\n",
-    "\n",
     "\n",
     "one_sample_predict(svm_clf, X_train)"
    ]
