usunięto polskie znaki z tekstu

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import re\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from unidecode import unidecode"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +90,7 @@
        "4      2  [PL/EN]           Piękne, stylowe i wysmakowan..."
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +105,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>Opis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Do wynajęcia mieszkanie dwupokojowe z ogródkie...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Wygodne, rozkładowe, częściowo umeblowane mies...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Do wynajęcia mieszkanie 70m z tarasem o powier...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Na wynajem - jasne i przytulne mieszkanie dwup...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[PL/EN]           Piękne, stylowe i wysmakowan...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index  Label                                               Opis\n",
+       "0      0      2  Do wynajęcia mieszkanie dwupokojowe z ogródkie...\n",
+       "1      1      2  Wygodne, rozkładowe, częściowo umeblowane mies...\n",
+       "2      2      2  Do wynajęcia mieszkanie 70m z tarasem o powier...\n",
+       "3      3      2  Na wynajem - jasne i przytulne mieszkanie dwup...\n",
+       "4      4      2  [PL/EN]           Piękne, stylowe i wysmakowan..."
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.reset_index()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +203,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +230,7 @@
        "'do wynajęcia mieszkanie dwupokojowe z ogródkiem i garażem w wilanowie zawadach przy ul. bruzdowej 100d. mieszkanie gotowe do wynajęcia, dostępne od zaraz, częściowo umeblowane (kuchnia, łazienka i przedpokój). wygodne, przestronne, w sypialni duża szafa, ogródek około 40 m2. sypialnia o powierzchni 15 m2 z dużymi oknami i roletami. do mieszkania przynależy miejsce parkingowe oraz duża komórka lokatorska na poziomie -1 w cenie 350 zł. komunikacja autobusowa przy placu vogla i ulicy sytej, tam też znajduje się mini galeria, lidl, biedronka, restauracje, punkty usługowe, miejsca spotkań. osiedle zamknięte z wyjściem i wyjazdem do wału zawadowskiego, tuż za wałem jest wisła, dużo zieleni, miejsc do spacerów, trasa rowerowa, wiślańskie plaże. podana cena jest bez czynszu administracyjnego, który wynosi 950 zł. wymagany najem okazjonalny. zapraszam zobacz wirtualny spacer: https://panoramy.galactica.pl/virgo/423768pośrednik odpowiedzialny zawodowo za wykonanie umowy pośrednictwa:  (licencja nr: 24900)'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +258,7 @@
        "'do wynajęcia mieszkanie dwupokojowe z ogródkiem i garażem w wilanowie zawadach przy ul bruzdowej 100d mieszkanie gotowe do wynajęcia dostępne od zaraz częściowo umeblowane kuchnia łazienka i przedpokój wygodne przestronne w sypialni duża szafa ogródek około 40 m2 sypialnia o powierzchni 15 m2 z dużymi oknami i roletami do mieszkania przynależy miejsce parkingowe oraz duża komórka lokatorska na poziomie 1 w cenie 350 zł komunikacja autobusowa przy placu vogla i ulicy sytej tam też znajduje się mini galeria lidl biedronka restauracje punkty usługowe miejsca spotkań osiedle zamknięte z wyjściem i wyjazdem do wału zawadowskiego tuż za wałem jest wisła dużo zieleni miejsc do spacerów trasa rowerowa wiślańskie plaże podana cena jest bez czynszu administracyjnego który wynosi 950 zł wymagany najem okazjonalny zapraszam zobacz wirtualny spacer  odpowiedzialny zawodowo za wykonanie umowy pośrednictwa  licencja nr 24900'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +297,7 @@
        "'wynająć mieszkanie dwupokojowy ogródek garaż wilanowa zawada ulica bruzdowy 100d mieszkanie gotowy wynająć dostępny zaraz częściowo umeblować kuchnia łazienka przedpokój wygodny przestronny sypialnia duży szafa ogródek 40 m2 sypialnia powierzchnia 15 imio2 duży okno rolet mieszkanie przynależeć miejsce parkingowy duży komórka lokatorsky poziom 1 cena 350 złoty komunikacja autobusowy plac vogla ulica syty znajdować mini galeria lidl biedronka restauracja punkt usługowy miejsce spotkanie osiedle zamknięty wyjście wyjazd wał zawadowskiy tuż wał wisły zieleń miejsce spacer trasa rowerowy wiślański plaża podać cena czynsz administracyjny wynosić 950 złoty wymagać najem okazjonalny zapraszać zobaczyć wirtualny spacer   odpowiedzialny zawodowo wykonać umowa pośrednictwo   licencja numer 24900'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,16 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'wynająć mieszkanie dwupokojowy ogródek garaż wilanowa zawada ulica bruzdowy mieszkanie gotowy wynająć dostępny zaraz częściowo umeblować kuchnia łazienka przedpokój wygodny przestronny sypialnia duży szafa ogródek   metr sypialnia powierzchnia   metr duży okno rolet mieszkanie przynależeć miejsce parkingowy duży komórka lokatorsky poziom   cena   złoty komunikacja autobusowy plac vogla ulica syty znajdować mini galeria lidl biedronka restauracja punkt usługowy miejsce spotkanie osiedle zamknięty wyjście wyjazd wał zawadowskiy tuż wał wisły zieleń miejsce spacer trasa rowerowy wiślański plaża podać cena czynsz administracyjny wynosić   złoty wymagać najem okazjonalny zapraszać zobaczyć wirtualny spacer   odpowiedzialny zawodowo wykonać umowa pośrednictwo   licencja numer'"
+       "'wynająć mieszkanie dwupokojowy ogródek garaż wilanowa zawada ulica bruzdowy 100d mieszkanie gotowy wynająć dostępny zaraz częściowo umeblować kuchnia łazienka przedpokój wygodny przestronny sypialnia duży szafa ogródek 40 m2 sypialnia powierzchnia 15 imio2 duży okno rolet mieszkanie przynależeć miejsce parkingowy duży komórka lokatorsky poziom cena 350 złoty komunikacja autobusowy plac vogla ulica syty znajdować mini galeria lidl biedronka restauracja punkt usługowy miejsce spotkanie osiedle zamknięty wyjście wyjazd wał zawadowskiy tuż wał wisły zieleń miejsce spacer trasa rowerowy wiślański plaża podać cena czynsz administracyjny wynosić 950 złoty wymagać najem okazjonalny zapraszać zobaczyć wirtualny spacer   odpowiedzialny zawodowo wykonać umowa pośrednictwo   licencja numer 24900'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,12 +354,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Usunięcie polskich znaków"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'wynajac mieszkanie dwupokojowy ogrodek garaz wilanowa zawada ulica bruzdowy 100d mieszkanie gotowy wynajac dostepny zaraz czesciowo umeblowac kuchnia lazienka przedpokoj wygodny przestronny sypialnia duzy szafa ogrodek 40 m2 sypialnia powierzchnia 15 imio2 duzy okno rolet mieszkanie przynalezec miejsce parkingowy duzy komorka lokatorsky poziom cena 350 zloty komunikacja autobusowy plac vogla ulica syty znajdowac mini galeria lidl biedronka restauracja punkt uslugowy miejsce spotkanie osiedle zamkniety wyjscie wyjazd wal zawadowskiy tuz wal wisly zielen miejsce spacer trasa rowerowy wislanski plaza podac cena czynsz administracyjny wynosic 950 zloty wymagac najem okazjonalny zapraszac zobaczyc wirtualny spacer   odpowiedzialny zawodowo wykonac umowa posrednictwo   licencja numer 24900'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Opis\"] = df[\"Opis\"].apply(unidecode)\n",
+    "df[\"Opis\"][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Podział na dane treningowe i testowe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,25 +433,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dokładność na zbiorze treningowym: 0.8580750407830342\n",
-      "Dokładność na zbiorze testowym: 0.8441558441558441\n",
+      "Dokładność na zbiorze treningowym: 0.8515497553017944\n",
+      "Dokładność na zbiorze testowym: 0.8376623376623377\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.77      0.82      0.80        50\n",
-      "           1       0.80      0.78      0.79        46\n",
-      "           2       0.95      0.91      0.93        58\n",
+      "           0       0.77      0.80      0.78        50\n",
+      "           1       0.78      0.76      0.77        46\n",
+      "           2       0.95      0.93      0.94        58\n",
       "\n",
       "    accuracy                           0.84       154\n",
-      "   macro avg       0.84      0.84      0.84       154\n",
-      "weighted avg       0.85      0.84      0.85       154\n",
+      "   macro avg       0.83      0.83      0.83       154\n",
+      "weighted avg       0.84      0.84      0.84       154\n",
       "\n"
      ]
     }
@@ -408,25 +522,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dokładność na zbiorze treningowym: 0.8727569331158238\n",
-      "Dokładność na zbiorze testowym: 0.9025974025974026\n",
+      "Dokładność na zbiorze treningowym: 0.8694942903752039\n",
+      "Dokładność na zbiorze testowym: 0.8961038961038961\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.91      0.80      0.85        50\n",
-      "           1       0.85      0.96      0.90        46\n",
-      "           2       0.95      0.95      0.95        58\n",
+      "           0       0.95      0.78      0.86        50\n",
+      "           1       0.83      0.96      0.89        46\n",
+      "           2       0.92      0.95      0.93        58\n",
       "\n",
       "    accuracy                           0.90       154\n",
-      "   macro avg       0.90      0.90      0.90       154\n",
-      "weighted avg       0.91      0.90      0.90       154\n",
+      "   macro avg       0.90      0.89      0.89       154\n",
+      "weighted avg       0.90      0.90      0.89       154\n",
       "\n"
      ]
     }
@@ -481,25 +595,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dokładność na zbiorze treningowym: 0.8482871125611745\n",
-      "Dokładność na zbiorze testowym: 0.7857142857142857\n",
+      "Dokładność na zbiorze treningowym: 0.8417618270799347\n",
+      "Dokładność na zbiorze testowym: 0.8051948051948052\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.68      0.80      0.73        50\n",
-      "           1       0.80      0.72      0.76        46\n",
-      "           2       0.89      0.83      0.86        58\n",
+      "           0       0.75      0.76      0.75        50\n",
+      "           1       0.77      0.72      0.74        46\n",
+      "           2       0.88      0.91      0.90        58\n",
       "\n",
-      "    accuracy                           0.79       154\n",
-      "   macro avg       0.79      0.78      0.78       154\n",
-      "weighted avg       0.80      0.79      0.79       154\n",
+      "    accuracy                           0.81       154\n",
+      "   macro avg       0.80      0.80      0.80       154\n",
+      "weighted avg       0.80      0.81      0.80       154\n",
       "\n"
      ]
     }
@@ -553,25 +667,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dokładność na zbiorze treningowym: 0.9070146818923328\n",
+      "Dokładność na zbiorze treningowym: 0.9004893964110929\n",
       "\n",
-      "Dokładność na zbiorze testowym: 0.8636363636363636\n",
+      "Dokładność na zbiorze testowym: 0.8311688311688312\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.80      0.80      0.80        50\n",
-      "           1       0.84      0.78      0.81        46\n",
-      "           2       0.93      0.98      0.96        58\n",
+      "           0       0.74      0.80      0.77        50\n",
+      "           1       0.82      0.67      0.74        46\n",
+      "           2       0.92      0.98      0.95        58\n",
       "\n",
-      "    accuracy                           0.86       154\n",
-      "   macro avg       0.86      0.86      0.86       154\n",
-      "weighted avg       0.86      0.86      0.86       154\n",
+      "    accuracy                           0.83       154\n",
+      "   macro avg       0.83      0.82      0.82       154\n",
+      "weighted avg       0.83      0.83      0.83       154\n",
       "\n"
      ]
     }
