--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Czyszczenie danych"
+    "## Czyszczenie danych:"
    ]
   },
   {
